Added scoreboard function

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
       <ul class="menu-list">
         <li class="menu-item"><a href="#home-view" class="menu-link home-view active-menu">Avaleht</a></li>
         <li class="menu-item"><a href="#app-view" class="menu-link app-view">Mäng</a></li>
+        <li class="menu-item"><a href="#score-view" class="menu-link app-view">Score</a></li>
       </ul>
     </nav>
 
@@ -25,6 +26,12 @@
         <h1>Avaleht</h1>
         <p>Tere tulemast mängima!</p>
         <p>Siin saad sisestada oma nime ja näed ennast pärast skoori järgi tabelis.</p>
+        <input id="name" type="text" placeholder="Sinu nimi"><br/>
+        <input id="start-button" type="button" value="Start">
+      </section>
+
+      <section id="score-view">
+        adadsas
       </section>
     </main>
   </body>
