--- a/index.html
+++ b/index.html
@@ -11,28 +11,29 @@
       <ul class="menu-list">
         <li class="menu-item"><a href="#home-view" class="menu-link home-view active-menu">Avaleht</a></li>
         <li class="menu-item"><a href="#app-view" class="menu-link app-view">Mäng</a></li>
-        <li class="menu-item"><a href="#score-view" class="menu-link app-view">Score</a></li>
+        <!--<li class="menu-item"><a href="#score-view" class="menu-link score-view">Edetabel</a></li>-->
       </ul>
     </nav>
 
     <main role="app">
       <section id="app-view">
-        <h1>Sõnade trükkimise mäng</h1>
-        <canvas>
-        </canvas>
       </section>
 
       <section id="home-view">
         <h1>Avaleht</h1>
         <p>Tere tulemast mängima!</p>
+        <p>Mängu eesmärk on 60 sekundi jooksul trükkida võimalikult palju sõnu.</p>
+        <p>Pane tähele, et iga valesti trükitud tähega kaotad punkte!</p><br>
         <p>Siin saad sisestada oma nime ja näed ennast pärast skoori järgi tabelis.</p>
-        <input id="name" type="text" placeholder="Sinu nimi"><br/>
-        <input id="start-button" type="button" value="Start">
+        <div id="playerName">
+          <input id="nameField" type="text" placeholder="Nimi">
+          <button onclick="startGame()">Start</button>
+        </div>
       </section>
 
-      <section id="score-view">
-        adadsas
-      </section>
+      <!--<section id="score-view">
+        <h1>Edetabel</h1>
+      </section>-->
     </main>
   </body>
 </html>
